2008-07-25  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-processor.c: (indexer_status_cb),
	(indexer_finished_cb): Call the index reload function when we get
	status updates from the indexer.
	
	* tests/trackerd/tracker-indexer-test.c: Renamed to reflect new
	TrackerIndex name.

2008-07-25  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-db.[ch]:
	* src/trackerd/tracker-dbus.[ch]:
	* src/trackerd/tracker-index-manager.[ch]:
	* src/trackerd/tracker-index.[ch]:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-query-tree.[ch]:
	* src/trackerd/tracker-search.[ch]: Renamed
	TrackerIndexer->TrackerIndex, since it is the index not the
	indexer. 

2008-07-25  Martyn Russell  <martyn@imendio.com>

	* configure.ac:
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-db.h:
	* src/trackerd/tracker-dbus.h:
	* src/trackerd/tracker-index-manager.h:
	* src/trackerd/tracker-index.c:
	* src/trackerd/tracker-indexer.[ch]:
	* src/trackerd/tracker-keywords.c:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-metadata.[ch]:
	* src/trackerd/tracker-query-tree.h:
	* src/trackerd/tracker-search.[ch]:
	* src/trackerd/tracker-xesam.[ch]: Renamed tracker-indexer to
	tracker-index. 

2008-07-25  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-index-manager.[ch]: 
	* src/trackerd/tracker-indexer.h: Code clean ups.

2008-07-25  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-indexer.[ch]: Added "reload" capabilities
	to the indexer.
	
	* tests/trackerd/Makefile.am
	* tests/trackerd/tracker-indexer-test.c: Tests to the new
	functionality. This tests use GIO to copy a file. 
	
2008-07-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-dbus.c: Don't try to pause the indexer if 
	it's not running

2008-07-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker/tracker-query.c
	* src/libtracker/tracker-search.c
	* src/libtracker/tracker-tag.c
	* src/libtracker/tracker-stats.c